--- a/perception/point_cloud_object_detection_and_recognition/launch/pcodar.yaml
+++ b/perception/point_cloud_object_detection_and_recognition/launch/pcodar.yaml
@@ -14,6 +14,9 @@ filter_points_leaf_size_x: 0.2
 filter_points_leaf_size_y: 0.2
 filter_points_leaf_size_z: 0.2
 
+outier_removal_std_dev_thresh: 2.0
+outier_removal_mean_k: 10
+
 icp_max_corespondence_distance: 0.1
 icp_max_iterations: 40
 icp_transformation_epsilon: 1E-8
