--- a/perception/point_cloud_object_detection_and_recognition/package.xml
+++ b/perception/point_cloud_object_detection_and_recognition/package.xml
@@ -34,4 +34,7 @@
   <build_depend>cv_bridge</build_depend>
   <run_depend>cv_bridge</run_depend>
 
+  <build_depend>dynamic_reconfigure</build_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
+
 </package>
